--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
         <div class="contact-item" style="width: 240px;">
           <a href="https://drive.google.com/file/d/1Iu2P3osKPUXnAkUecDD9gDKia6qqrbv0/view?usp=sharing" >
             <img src="https://img.icons8.com/ios/50/ffffff/internet.png"style="margin-left: 80px;" alt="Download Resume"></a>
-            <h3>DOWNLOAD RESUME</h3>
-            <a href="https://drive.google.com/file/d/1Iu2P3osKPUXnAkUecDD9gDKia6qqrbv0/view?usp=sharing">resumelink</a>
+            <h3>Social Media</h3>
+            <a href="https://www.instagram.com/shubham_maratha9990?igsh=NWx3eHl5bHI3M3Uw">Instragram</a>
         </div>
     </div>
 </footer>
